--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header class="navbar">
         <div class="container">
-            <a href="Javascript:void(0)"><img src="./Assets/logo.png" alt="Logo"></a>
+            <a href="Javascript:void(0)"><img src="https://i.postimg.cc/hG9dzF2Y/logo.png" alt="Logo"></a>
             <nav>
                 <ul class="nav-center">
                     <li><a href="Javascript:void(0)">Homepage</a></li>
@@ -23,8 +23,8 @@
                 </ul>
             </nav>
             <div class="nav-end">
-                <a href="Javascript:void(0)"><img src="./Assets/right-left.png" alt="arrow"></a>
-                <a href="Javascript:void(0)"><img src="./Assets/heart.png" alt="arrow"></a>
+                <a href="Javascript:void(0)"><img src="https://i.postimg.cc/X7Dp1NZF/right-left.png" alt="arrow"></a>
+                <a href="Javascript:void(0)"><img src="https://i.postimg.cc/mgYWz8GD/heart.png" alt="heart"></a>
             </div>
             <div class="hamburger">
                 <div class="bar"></div>
@@ -54,7 +54,7 @@
         <h2>Featured Properties</h2>
         <div class="card-wrapper">
             <div class="card">
-                <img src="./Assets/img1.jpg" alt="img-1" class="card-img">
+                <img src="https://i.postimg.cc/HLYnVG5B/img1.jpg" alt="img-1" class="card-img">
                 <div class="card-body">
                     <p class="card-title">Villa With Pool For Sale</p>
                     <p class="card-price">$225,000</p>
@@ -66,7 +66,7 @@
 
             </div>
             <div class="card">
-                <img src="./Assets/img2.jpg" alt="img-1" class="card-img">
+                <img src="https://i.postimg.cc/G2Y2Hvzx/img2.jpg" alt="img-2" class="card-img">
                 <div class="card-body">
                     <p class="card-title">Villa With Pool For Sale</p>
                     <p class="card-price">$225,000</p>
@@ -78,7 +78,7 @@
 
             </div>
             <div class="card">
-                <img src="./Assets/img3.jpg" alt="img-1" class="card-img">
+                <img src="https://i.postimg.cc/CxD6r1v6/img3.jpg" alt="img-3" class="card-img">
                 <div class="card-body">
                     <p class="card-title">Villa With Pool For Sale</p>
                     <p class="card-price">$225,000</p>
@@ -90,7 +90,7 @@
 
             </div>
             <div class="card">
-                <img src="./Assets/img4.jpg" alt="img-1" class="card-img">
+                <img src="https://i.postimg.cc/CMBtnmGg/img4.jpg" alt="img-4" class="card-img">
                 <div class="card-body">
                     <p class="card-title">Villa With Pool For Sale</p>
                     <p class="card-price">$225,000</p>
@@ -102,7 +102,7 @@
 
             </div>
             <div class="card">
-                <img src="./Assets/img5.jpg" alt="img-1" class="card-img">
+                <img src="https://i.postimg.cc/RFjgTx7z/img5.jpg" alt="img-5" class="card-img">
                 <div class="card-body">
                     <p class="card-title">Villa With Pool For Sale</p>
                     <p class="card-price">$225,000</p>
@@ -114,7 +114,7 @@
 
             </div>
             <div class="card">
-                <img src="./Assets/img6.jpg" alt="img-1" class="card-img">
+                <img src="https://i.postimg.cc/2yQ7Fbj4/img6.jpg" alt="img-6" class="card-img">
                 <div class="card-body">
                     <p class="card-title">Villa With Pool For Sale</p>
                     <p class="card-price">$225,000</p>
@@ -148,7 +148,7 @@
     <section class="villa-section">
         <div class="container">
             <div class="villa-card">
-                <a href="javascript:void(0)" class="villa-label">FOR SALE</a>
+                <div class="villa-label">FOR SALE</div>
                 <p class="card-title">Villa With Pool For Sale</p>
                 <p class="card-price">$225,000</p>
                 <p class="card-description">263 S Rexford Dr, Beverly Hills, CA 90212</p>
@@ -163,7 +163,7 @@
                 <p class="card-position">
                     Sales Manager
                 </p>
-                <div href="javascript:void(0)" class="primary-btn-md">Contact</div>
+                <a href="javascript:void(0)" class="primary-btn-md">Contact</a>
             </div>
         </div>
     </section>
@@ -171,9 +171,9 @@
         <h2>What Our Clients Say</h2>
         <div class="container-box">
             <div class="card-wrapper"> 
-                <img src="./Assets/left-arrow.png" alt="left-arrow" class="left arrow">
+                <img src="https://i.postimg.cc/Dz4j4zGc/left-arrow.png" alt="left-arrow" class="left arrow">
                 <div class="client-card active">
-                    <img src="./Assets/profile.png" alt="profile-1" class="card-profile">
+                    <img src="https://i.postimg.cc/sx9Bx5KZ/profile.png" alt="profile-1" class="card-profile">
                     <h3 class="card-title">Bansilal Brata</h3>
                     <p class="card-description">Have you ever heard the expression, “Do not count your chickens before
                         they hatch?” Maybe an older, wiser individual would tell you this to keep you from getting ahead
@@ -181,31 +181,31 @@
                         obtaining your goals, you need to “Count your chicken before they hatch”</p>
                 </div>
                 <div class="client-card">
-                    <img src="./Assets/user.png" alt="profile-1" class="card-profile">
+                    <img src="https://i.postimg.cc/QdqqwT3C/user.png" alt="profile-1" class="card-profile">
                     <h3 class="card-title">Oluchi Mazi</h3>
                     <p class="card-description">The popularity of breakfast foods is a good reason to keep dependable starters, such as eggs, bread and other staples, on hand. But why reserve them only for morning meals? Planning breakfast for dinner is a good way to serve up simple, satisfying evening meals without spending a lot of time in the kitchen.</p>
                 </div>
                 <div class="client-card">
-                    <img src="./Assets/bussiness-man.png" alt="profile-1" class="card-profile">
+                    <img src="https://i.postimg.cc/JzRn6yxp/bussiness-man.png" alt="profile-1" class="card-profile">
                     <h3 class="card-title ">Fariba Mirzaii</h3>
                     <p class="card-description">If there is one thing kids love more than eating pizza, it’s being able to make it themselves using all their favorite toppings. Creating a “make it yourself” pizza party is a great way to customize the meal while involving friends and family in a fun activity. Best of all, this crust recipe, which uses a surprise ingredient, is simple enough.</p>
                 </div>
                 <div class="client-card">
-                    <img src="./Assets/man.png" alt="profile-1" class="card-profile">
+                    <img src="https://i.postimg.cc/85cT8Mfb/man.png" alt="profile-1" class="card-profile">
                     <h3 class="card-title ">Bansilal Brata</h3>
                     <p class="card-description">The popularity of breakfast foods is a good reason to keep dependable starters, such as eggs, bread and other staples, on hand. But why reserve them only for morning meals? Planning breakfast for dinner is a good way to serve up simple, satisfying evening meals without spending a lot of time in the kitchen.</p>
                 </div>
                 <div class="client-card">
-                    <img src="./Assets/bussiness-man.png" alt="profile-1" class="card-profile">
+                    <img src="https://i.postimg.cc/JzRn6yxp/bussiness-man.png" alt="profile-1" class="card-profile">
                     <h3 class="card-title ">Bansilal Brata</h3>
                     <p class="card-description">If there is one thing kids love more than eating pizza, it’s being able to make it themselves using all their favorite toppings. Creating a “make it yourself” pizza party is a great way to customize the meal while involving friends and family in a fun activity. Best of all, this crust recipe, which uses a surprise ingredient, is simple enough.</p>
                 </div>
-                <img src="./Assets/right-arrow.png" alt="right-arrow" class="right arrow">
+                <img src="https://i.postimg.cc/9MLzZcZL/right-arrow.png" alt="right-arrow" class="right arrow">
             </div>
         </div>
     </article>
     <footer>
-        <img src="./Assets/logo-copy.png" alt="logo-copy">
+        <img src="https://i.postimg.cc/BQCdJt5L/logo-copy.png" alt="logo-copy">
         <p>
             Have you ever heard the expression, “Do not count your chickens before they hatch?” Maybe an older, wiser individual would tell you this to keep you from getting ahead of yourself.
         </p>
