--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
             <a href="Javascript:void(0)"><img src="https://i.postimg.cc/hG9dzF2Y/logo.png" alt="Logo"></a>
             <nav>
                 <ul class="nav-center">
-                    <li><a href="Javascript:void(0)">Homepage</a></li>
-                    <li><a href="Javascript:void(0)">About Us</a></li>
-                    <li><a href="Javascript:void(0)">For Rent</a></li>
-                    <li><a href="Javascript:void(0)">For Sale</a></li>
-                    <li><a href="Javascript:void(0)">Our Agents</a></li>
-                    <li><a href="Javascript:void(0)">Contact Us</a></li>
+                    <li><a href="Javascript:void(0)" class="font-sm">Homepage</a></li>
+                    <li><a href="Javascript:void(0)"class="font-sm">About Us</a></li>
+                    <li><a href="Javascript:void(0)"class="font-sm">For Rent</a></li>
+                    <li><a href="Javascript:void(0)"class="font-sm">For Sale</a></li>
+                    <li><a href="Javascript:void(0)" class="font-sm">Our Agents</a></li>
+                    <li><a href="Javascript:void(0)"class="font-sm">Contact Us</a></li>
                 </ul>
             </nav>
-            <div class="nav-end">
+            <div class="nav-end flex-center">
                 <a href="Javascript:void(0)"><img src="https://i.postimg.cc/X7Dp1NZF/right-left.png" alt="arrow"></a>
                 <a href="Javascript:void(0)"><img src="https://i.postimg.cc/mgYWz8GD/heart.png" alt="heart"></a>
             </div>
@@ -33,95 +33,95 @@
     </header>
     <section class="hero">
         <div class="hero-wrapper container">
-            <h1 class="hero-title">Let us Guide You Home</h1>
-            <p class="hero-description">Find the house of your dreams.</p>
+            <h1 class="hero-title font-lg">Let us Guide You Home</h1>
+            <p class="hero-description font-md-1">Find the house of your dreams.</p>
             <div class="dropdown">
-                      <input type="text" placeholder="Select" />
+                      <input type="text" placeholder="Select" readonly class="font-md-1"/>
                       <ul class="options">
-                        <li class="option">Rent</li>
-                        <li class="option">Sell</li>
-                        <li class="option">Lease</li>
-                        <li class="option">Buy</li>
+                        <li class="option font-md-1">Rent</li>
+                        <li class="option font-md-1">Sell</li>
+                        <li class="option font-md-1">Lease</li>
+                        <li class="option font-md-1">Buy</li>
                        
                       </ul>
                     </div>
             <div class="search-container">
-                <input type="text" class="search-input" placeholder="Search for properties or keywords..">
+                <input type="text" class="search-input font-md-1" placeholder="Search for properties or keywords..">
             </div>
         </div>
     </section>
     <article class="featured-property container">
-        <h2>Featured Properties</h2>
-        <div class="card-wrapper">
+        <h2 class="font-md">Featured Properties</h2>
+        <div class="card-wrapper flex-space">
             <div class="card">
                 <img src="https://i.postimg.cc/HLYnVG5B/img1.jpg" alt="img-1" class="card-img">
                 <div class="card-body">
-                    <p class="card-title">Villa With Pool For Sale</p>
-                    <p class="card-price">$225,000</p>
-                    <p class="card-description">263 S Rexford Dr, Beverly Hills, CA 90212</p>
-                    <p class="details card-beds">4 Beds</p>
-                    <p class="details card-baths">2 Baths</p>
-                    <p class="details card-sqft">980 SqFt</p>
+                    <p class="card-title font-md-1">Villa With Pool For Sale</p>
+                    <p class="card-price font-md-1">$225,000</p>
+                    <p class="card-description font-sm">263 S Rexford Dr, Beverly Hills, CA 90212</p>
+                    <p class="details card-beds font-sm">4 Beds</p>
+                    <p class="details card-baths font-sm">2 Baths</p>
+                    <p class="details card-sqft font-sm">980 SqFt</p>
                 </div>
 
             </div>
             <div class="card">
                 <img src="https://i.postimg.cc/G2Y2Hvzx/img2.jpg" alt="img-2" class="card-img">
                 <div class="card-body">
-                    <p class="card-title">Villa With Pool For Sale</p>
-                    <p class="card-price">$225,000</p>
-                    <p class="card-description">263 S Rexford Dr, Beverly Hills, CA 90212</p>
-                    <p class="details card-beds">4 Beds</p>
-                    <p class="details card-baths">2 Baths</p>
-                    <p class="details card-sqft">980 SqFt</p>
+                    <p class="card-title font-md-1">Villa With Pool For Sale</p>
+                    <p class="card-price font-md-1">$225,000</p>
+                    <p class="card-description font-sm">263 S Rexford Dr, Beverly Hills, CA 90212</p>
+                    <p class="details card-beds font-sm">4 Beds</p>
+                    <p class="details card-baths font-sm">2 Baths</p>
+                    <p class="details card-sqft font-sm">980 SqFt</p>
                 </div>
 
             </div>
             <div class="card">
                 <img src="https://i.postimg.cc/CxD6r1v6/img3.jpg" alt="img-3" class="card-img">
                 <div class="card-body">
-                    <p class="card-title">Villa With Pool For Sale</p>
-                    <p class="card-price">$225,000</p>
-                    <p class="card-description">263 S Rexford Dr, Beverly Hills, CA 90212</p>
-                    <p class="details card-beds">4 Beds</p>
-                    <p class="details card-baths">2 Baths</p>
-                    <p class="details card-sqft">980 SqFt</p>
+                    <p class="card-title font-md-1">Villa With Pool For Sale</p>
+                    <p class="card-price font-md-1">$225,000</p>
+                    <p class="card-description font-sm">263 S Rexford Dr, Beverly Hills, CA 90212</p>
+                    <p class="details card-beds font-sm">4 Beds</p>
+                    <p class="details card-baths font-sm">2 Baths</p>
+                    <p class="details card-sqft font-sm">980 SqFt</p>
                 </div>
 
             </div>
             <div class="card">
                 <img src="https://i.postimg.cc/CMBtnmGg/img4.jpg" alt="img-4" class="card-img">
                 <div class="card-body">
-                    <p class="card-title">Villa With Pool For Sale</p>
-                    <p class="card-price">$225,000</p>
-                    <p class="card-description">263 S Rexford Dr, Beverly Hills, CA 90212</p>
-                    <p class="details card-beds">4 Beds</p>
-                    <p class="details card-baths">2 Baths</p>
-                    <p class="details card-sqft">980 SqFt</p>
+                    <p class="card-title font-md-1">Villa With Pool For Sale</p>
+                    <p class="card-price font-md-1">$225,000</p>
+                    <p class="card-description font-sm">263 S Rexford Dr, Beverly Hills, CA 90212</p>
+                    <p class="details card-beds font-sm">4 Beds</p>
+                    <p class="details card-baths font-sm">2 Baths</p>
+                    <p class="details card-sqft font-sm">980 SqFt</p>
                 </div>
 
             </div>
             <div class="card">
                 <img src="https://i.postimg.cc/RFjgTx7z/img5.jpg" alt="img-5" class="card-img">
                 <div class="card-body">
-                    <p class="card-title">Villa With Pool For Sale</p>
-                    <p class="card-price">$225,000</p>
-                    <p class="card-description">263 S Rexford Dr, Beverly Hills, CA 90212</p>
-                    <p class="details card-beds">4 Beds</p>
-                    <p class="details card-baths">2 Baths</p>
-                    <p class="details card-sqft">980 SqFt</p>
+                    <p class="card-title font-md-1">Villa With Pool For Sale</p>
+                    <p class="card-price font-md-1">$225,000</p>
+                    <p class="card-description font-sm">263 S Rexford Dr, Beverly Hills, CA 90212</p>
+                    <p class="details card-beds font-sm">4 Beds</p>
+                    <p class="details card-baths font-sm">2 Baths</p>
+                    <p class="details card-sqft font-sm">980 SqFt</p>
                 </div>
 
             </div>
             <div class="card">
                 <img src="https://i.postimg.cc/2yQ7Fbj4/img6.jpg" alt="img-6" class="card-img">
                 <div class="card-body">
-                    <p class="card-title">Villa With Pool For Sale</p>
-                    <p class="card-price">$225,000</p>
-                    <p class="card-description">263 S Rexford Dr, Beverly Hills, CA 90212</p>
-                    <p class="details card-beds">4 Beds</p>
-                    <p class="details card-baths">2 Baths</p>
-                    <p class="details card-sqft">980 SqFt</p>
+                    <p class="card-title font-md-1">Villa With Pool For Sale</p>
+                    <p class="card-price font-md-1">$225,000</p>
+                    <p class="card-description font-sm">263 S Rexford Dr, Beverly Hills, CA 90212</p>
+                    <p class="details card-beds font-sm">4 Beds</p>
+                    <p class="details card-baths font-sm">2 Baths</p>
+                    <p class="details card-sqft font-sm">980 SqFt</p>
                 </div>
 
             </div>
@@ -129,16 +129,16 @@
         <a href="javscript:void(0)" class="primary-btn-sm">All Properties</a>
     </article>
     <section class="property-information container">
-        <div class="information-card-wrapper">
+        <div class="information-card-wrapper flex-space">
             <div class="information-card">
-                <h2>Aktas Properties
+                <h2 class="font-lg">Aktas Properties
                     Information</h2>
-                <p>1234 Hacker St, San Francisco</p>
-                <p>(123) 456-7890</p>
-                <p>Mon — Sun: 8:00am - 6:00pm</p>
+                <p class="font-md-1">1234 Hacker St, San Francisco</p>
+                <p class="font-md-1">(123) 456-7890</p>
+                <p class="font-md-1">Mon — Sun: 8:00am - 6:00pm</p>
             </div>
             <div class="contact-card">
-                <h2>Want to Sell
+                <h2 class="font-lg">Want to Sell
                     Property?</h2>
                 <p>Let us create a tailored strategic marketing plan and keep track of the selling process.</p>
                 <a href="javascript:void(0)" class="secondary-btn">Contact Us</a>
@@ -149,7 +149,7 @@
         <div class="container">
             <div class="villa-card">
                 <div class="villa-label">FOR SALE</div>
-                <p class="card-title">Villa With Pool For Sale</p>
+                <p class="card-title font-md">Villa With Pool For Sale</p>
                 <p class="card-price">$225,000</p>
                 <p class="card-description">263 S Rexford Dr, Beverly Hills, CA 90212</p>
                 <p class="details card-beds">4 Beds</p>
@@ -157,10 +157,10 @@
                 <p class="details card-sqft">980 SqFt</p>
             </div>
             <div class="contact-card">
-                <h6 class="card-title">
+                <h6 class="card-title font-md-1">
                     Opi Watihana
                 </h6>
-                <p class="card-position">
+                <p class="card-position font-sm">
                     Sales Manager
                 </p>
                 <a href="javascript:void(0)" class="primary-btn-md">Contact</a>
@@ -168,9 +168,9 @@
         </div>
     </section>
     <article class="client-card-section container">
-        <h2>What Our Clients Say</h2>
+        <h2 class="font-md">What Our Clients Say</h2>
         <div class="container-box">
-            <div class="card-wrapper"> 
+            <div class="card-wrapper flex-center"> 
                 <img src="https://i.postimg.cc/Dz4j4zGc/left-arrow.png" alt="left-arrow" class="left arrow">
                 <div class="client-card active">
                     <img src="https://i.postimg.cc/sx9Bx5KZ/profile.png" alt="profile-1" class="card-profile">
@@ -206,7 +206,7 @@
     </article>
     <footer>
         <img src="https://i.postimg.cc/BQCdJt5L/logo-copy.png" alt="logo-copy">
-        <p>
+        <p class="font-sm">
             Have you ever heard the expression, “Do not count your chickens before they hatch?” Maybe an older, wiser individual would tell you this to keep you from getting ahead of yourself.
         </p>
     </footer>
