grid system updated

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </section>
     <article class="featured-property container">
         <h2 class="font-md">Featured Properties</h2>
-        <div class="card-wrapper flex-space">
+        <div class="card-wrapper">
             <div class="card">
                 <img src="https://i.postimg.cc/HLYnVG5B/img1.jpg" alt="img-1" class="card-img">
                 <div class="card-body">
