lazy loading added

--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reality Properties</title>
     <link rel="stylesheet" href="./css/style.css">
+    <script src="./src/script.js"></script>
 </head>
 
 <body>
     <header class="navbar">
         <div class="container">
             <a href="javascript:void(0)">
-                <img src="https://i.postimg.cc/63NcqGhP/logo.webp" alt="logo">
+                <img src="https://i.postimg.cc/63NcqGhP/logo.webp" alt="logo" loading="lazy">
             </a>
             <nav>
                 <ul class="nav-center">
@@ -88,10 +89,7 @@
         <h2 class="font-md">Featured Properties</h2>
         <div class="card-wrapper">
             <div class="card">
-                <picture>
-                    <source srcset="https://i.postimg.cc/xTGnWTV0/img1.webp">
-                    <img src="https://i.postimg.cc/HLYnVG5B/img1.jpg" alt="img1" class="card-img">
-                </picture>
+                    <img src="https://i.postimg.cc/xTGnWTV0/img1.webp" alt="img1" class="card-img" loading="lazy">
                 <div class="card-body">
                     <p class="card-title font-md-1">Villa With Pool For Sale</p>
                     <p class="card-price font-md-1">$225,000</p>
@@ -125,11 +123,7 @@
 
             </div>
             <div class="card">
-
-                <picture>
-                    <source srcset="https://i.postimg.cc/GhGK1tQS/img2.webp">
-                    <img src="https://i.postimg.cc/G2Y2Hvzx/img2.jpg" alt="img-2" class="card-img">
-                </picture>
+                    <img src="https://i.postimg.cc/GhGK1tQS/img2.webp" alt="img-2" class="card-img" loading="lazy">
                 <div class="card-body">
                     <p class="card-title font-md-1">Villa With Pool For Sale</p>
                     <p class="card-price font-md-1">$225,000</p>
@@ -163,11 +157,7 @@
 
             </div>
             <div class="card">
-
-                <picture>
-                    <source srcset="https://i.postimg.cc/63zscz7n/img3.webp">
-                    <img src="https://i.postimg.cc/CxD6r1v6/img3.jpg" alt="img-3" class="card-img">
-                </picture>
+                    <img src="https://i.postimg.cc/63zscz7n/img3.webp" alt="img-3" class="card-img" loading="lazy">
                 <div class="card-body">
                     <p class="card-title font-md-1">Villa With Pool For Sale</p>
                     <p class="card-price font-md-1">$225,000</p>
@@ -201,10 +191,7 @@
 
             </div>
             <div class="card">
-                <picture>
-                    <source srcset="https://i.postimg.cc/hvJCm0VS/img4.webp">
-                    <img src="https://i.postimg.cc/CMBtnmGg/img4.jpg" alt="img-4" class="card-img">
-                </picture>
+                    <img src="https://i.postimg.cc/hvJCm0VS/img4.webp" alt="img-4" class="card-img" loading="lazy">
                 <div class="card-body">
                     <p class="card-title font-md-1">Villa With Pool For Sale</p>
                     <p class="card-price font-md-1">$225,000</p>
@@ -238,10 +225,7 @@
 
             </div>
             <div class="card">
-                <picture>
-                    <source srcset="https://i.postimg.cc/HWqG2JnS/img5.webp">
-                    <img src="https://i.postimg.cc/RFjgTx7z/img5.jpg" alt="img-5" class="card-img">
-                </picture>
+                    <img src="https://i.postimg.cc/HWqG2JnS/img5.webp" alt="img-5" class="card-img" loading="lazy">
                 <div class="card-body">
                     <p class="card-title font-md-1">Villa With Pool For Sale</p>
                     <p class="card-price font-md-1">$225,000</p>
@@ -275,10 +259,7 @@
 
             </div>
             <div class="card">
-                <picture>
-                    <source srcset="https://i.postimg.cc/4x8BWMwJ/img6.webp">
-                    <img src="https://i.postimg.cc/2yQ7Fbj4/img6.jpg" alt="img-6" class="card-img">
-                </picture>
+                    <img src="https://i.postimg.cc/4x8BWMwJ/img6.webp" alt="img-6" class="card-img" loading="lazy">
                 <div class="card-body">
                     <p class="card-title font-md-1">Villa With Pool For Sale</p>
                     <p class="card-price font-md-1">$225,000</p>
@@ -382,17 +363,17 @@
         <h2 class="font-md">What Our Clients Say</h2>
         <div class="container-box">
             <div class="card-wrapper flex-center">
-                <img src="https://i.postimg.cc/D0qsJCxk/left-arrow.webp" alt="left-arrow" class="left arrow">
+                <img src="https://i.postimg.cc/D0qsJCxk/left-arrow.webp" alt="left-arrow" class="left arrow" loading="lazy">
                 <div class="client-card active">
-                    <img src="https://i.postimg.cc/fTGjb95h/profile.webp" alt="profile-1" class="card-profile">
+                    <img src="https://i.postimg.cc/fTGjb95h/profile.webp" alt="profile-1" class="card-profile" loading="lazy">
                     <h3 class="card-title">Bansilal Brata</h3>
                     <p class="card-description">Have you ever heard the expression, “Do not count your chickens before
                         they hatch?” Maybe an older, wiser individual would tell you this to keep you from getting ahead
                         of yourself. Like buying a new car before you actually got that new job. Well, when setting and
                         obtaining your goals, you need to “Count your chicken before they hatch”</p>
                 </div>
-                <div class="client-card">
-                    <img src="https://i.postimg.cc/L8FLSM69/user.webp" alt="profile-2" class="card-profile">
+                <div class="client-card" loading="lazy">
+                    <img src="https://i.postimg.cc/L8FLSM69/user.webp" alt="profile-2" class="card-profile" loading="lazy">
                     <h3 class="card-title">Oluchi Mazi</h3>
                     <p class="card-description">The popularity of breakfast foods is a good reason to keep dependable
                         starters, such as eggs, bread and other staples, on hand. But why reserve them only for morning
@@ -400,7 +381,7 @@
                         without spending a lot of time in the kitchen.</p>
                 </div>
                 <div class="client-card">
-                    <img src="https://i.postimg.cc/0yYd3Nvd/bussiness-man.webp" alt="profile-3" class="card-profile">
+                    <img src="https://i.postimg.cc/0yYd3Nvd/bussiness-man.webp" alt="profile-3" class="card-profile" loading="lazy">
                     <h3 class="card-title ">Fariba Mirzaii</h3>
                     <p class="card-description">If there is one thing kids love more than eating pizza, it’s being able
                         to make it themselves using all their favorite toppings. Creating a “make it yourself” pizza
@@ -408,7 +389,7 @@
                         Best of all, this crust recipe, which uses a surprise ingredient, is simple enough.</p>
                 </div>
                 <div class="client-card">
-                    <img src="https://i.postimg.cc/zBtyMs3k/man.webp" alt="profile-4" class="card-profile">
+                    <img src="https://i.postimg.cc/zBtyMs3k/man.webp" alt="profile-4" class="card-profile" loading="lazy">
                     <h3 class="card-title ">Bansilal Brata</h3>
                     <p class="card-description">The popularity of breakfast foods is a good reason to keep dependable
                         starters, such as eggs, bread and other staples, on hand. But why reserve them only for morning
@@ -416,25 +397,25 @@
                         without spending a lot of time in the kitchen.</p>
                 </div>
                 <div class="client-card">
-                    <img src="https://i.postimg.cc/0yYd3Nvd/bussiness-man.webp" alt="profile-5" class="card-profile">
+                    <img src="https://i.postimg.cc/0yYd3Nvd/bussiness-man.webp" alt="profile-5" class="card-profile" loading="lazy">
                     <h3 class="card-title ">Bansilal Brata</h3>
                     <p class="card-description">If there is one thing kids love more than eating pizza, it’s being able
                         to make it themselves using all their favorite toppings. Creating a “make it yourself” pizza
                         party is a great way to customize the meal while involving friends and family in a fun activity.
                         Best of all, this crust recipe, which uses a surprise ingredient, is simple enough.</p>
                 </div>
-                <img src="https://i.postimg.cc/QtgxcRZb/right-arrow.webp" alt="right-arrow" class="right arrow">
+                <img src="https://i.postimg.cc/QtgxcRZb/right-arrow.webp" alt="right-arrow" class="right arrow" loading="lazy">
             </div>
         </div>
     </article>
     <footer>
-        <img src="https://i.postimg.cc/qMY8g3JG/logo-copy.webp" alt="logo">
+        <img src="https://i.postimg.cc/qMY8g3JG/logo-copy.webp" alt="logo" loading="lazy">
         <p class="font-sm">
             Have you ever heard the expression, “Do not count your chickens before they hatch?” Maybe an older, wiser
             individual would tell you this to keep you from getting ahead of yourself.
         </p>
     </footer>
-    <script src="./src/script.js"></script>
+  
 </body>
 <!-- icon-1-->
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="16"
