lazy loading added

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reality Properties</title>
     <link rel="stylesheet" href="./css/style.css">
-    <script src="./src/script.js"></script>
 </head>
 
 <body>
@@ -89,7 +88,7 @@
         <h2 class="font-md">Featured Properties</h2>
         <div class="card-wrapper">
             <div class="card">
-                    <img src="https://i.postimg.cc/xTGnWTV0/img1.webp" alt="img1" class="card-img" loading="lazy">
+                <img src="https://i.postimg.cc/xTGnWTV0/img1.webp" alt="img1" class="card-img" loading="lazy">
                 <div class="card-body">
                     <p class="card-title font-md-1">Villa With Pool For Sale</p>
                     <p class="card-price font-md-1">$225,000</p>
@@ -98,7 +97,7 @@
                         <div class="icon-beds">
                             <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
                                 width="40" height="30" viewBox="0 0 30 30">
-                                <use xlink:href="#myIcon" x="-2" y="-6" class="icon"/>
+                                <use xlink:href="#myIcon" x="-2" y="-6" class="icon" />
                             </svg>
                             <span>4 Beds</span>
                         </div>
@@ -123,41 +122,7 @@
 
             </div>
             <div class="card">
-                    <img src="https://i.postimg.cc/GhGK1tQS/img2.webp" alt="img-2" class="card-img" loading="lazy">
-                <div class="card-body">
-                    <p class="card-title font-md-1">Villa With Pool For Sale</p>
-                    <p class="card-price font-md-1">$225,000</p>
-                    <p class="card-description font-sm">263 S Rexford Dr, Beverly Hills, CA 90212</p>
-                    <div class="icon-container">
-                        <div class="icon-beds">
-                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                width="40" height="30" viewBox="0 0 30 30">
-                                <use xlink:href="#myIcon" x="-2" y="-6" />
-                            </svg>
-                            <span>4 Beds</span>
-                        </div>
-                        <div class="icon-baths">
-                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                width="30" height="30" viewBox="0 0 30 30">
-                                <use xlink:href="#Icon2" x="0" y="0" />
-                            </svg>
-
-                            <span>2 Baths</span>
-                        </div>
-                        <div class="icon-3">
-                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
-                                width="20" height="19" viewBox="2 0 17 17">
-                                <use xlink:href="#icon3" x="1" y="0" />
-                            </svg>
-
-                            <span>980 SqFt</span>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            <div class="card">
-                    <img src="https://i.postimg.cc/63zscz7n/img3.webp" alt="img-3" class="card-img" loading="lazy">
+                <img src="https://i.postimg.cc/GhGK1tQS/img2.webp" alt="img-2" class="card-img" loading="lazy">
                 <div class="card-body">
                     <p class="card-title font-md-1">Villa With Pool For Sale</p>
                     <p class="card-price font-md-1">$225,000</p>
@@ -191,7 +156,7 @@
 
             </div>
             <div class="card">
-                    <img src="https://i.postimg.cc/hvJCm0VS/img4.webp" alt="img-4" class="card-img" loading="lazy">
+                <img src="https://i.postimg.cc/63zscz7n/img3.webp" alt="img-3" class="card-img" loading="lazy">
                 <div class="card-body">
                     <p class="card-title font-md-1">Villa With Pool For Sale</p>
                     <p class="card-price font-md-1">$225,000</p>
@@ -225,7 +190,7 @@
 
             </div>
             <div class="card">
-                    <img src="https://i.postimg.cc/HWqG2JnS/img5.webp" alt="img-5" class="card-img" loading="lazy">
+                <img src="https://i.postimg.cc/hvJCm0VS/img4.webp" alt="img-4" class="card-img" loading="lazy">
                 <div class="card-body">
                     <p class="card-title font-md-1">Villa With Pool For Sale</p>
                     <p class="card-price font-md-1">$225,000</p>
@@ -259,7 +224,41 @@
 
             </div>
             <div class="card">
-                    <img src="https://i.postimg.cc/4x8BWMwJ/img6.webp" alt="img-6" class="card-img" loading="lazy">
+                <img src="https://i.postimg.cc/HWqG2JnS/img5.webp" alt="img-5" class="card-img" loading="lazy">
+                <div class="card-body">
+                    <p class="card-title font-md-1">Villa With Pool For Sale</p>
+                    <p class="card-price font-md-1">$225,000</p>
+                    <p class="card-description font-sm">263 S Rexford Dr, Beverly Hills, CA 90212</p>
+                    <div class="icon-container">
+                        <div class="icon-beds">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                width="40" height="30" viewBox="0 0 30 30">
+                                <use xlink:href="#myIcon" x="-2" y="-6" />
+                            </svg>
+                            <span>4 Beds</span>
+                        </div>
+                        <div class="icon-baths">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                width="30" height="30" viewBox="0 0 30 30">
+                                <use xlink:href="#Icon2" x="0" y="0" />
+                            </svg>
+
+                            <span>2 Baths</span>
+                        </div>
+                        <div class="icon-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink"
+                                width="20" height="19" viewBox="2 0 17 17">
+                                <use xlink:href="#icon3" x="1" y="0" />
+                            </svg>
+
+                            <span>980 SqFt</span>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+            <div class="card">
+                <img src="https://i.postimg.cc/4x8BWMwJ/img6.webp" alt="img-6" class="card-img" loading="lazy">
                 <div class="card-body">
                     <p class="card-title font-md-1">Villa With Pool For Sale</p>
                     <p class="card-price font-md-1">$225,000</p>
@@ -363,9 +362,11 @@
         <h2 class="font-md">What Our Clients Say</h2>
         <div class="container-box">
             <div class="card-wrapper flex-center">
-                <img src="https://i.postimg.cc/D0qsJCxk/left-arrow.webp" alt="left-arrow" class="left arrow" loading="lazy">
+                <img src="https://i.postimg.cc/D0qsJCxk/left-arrow.webp" alt="left-arrow" class="left arrow"
+                    loading="lazy">
                 <div class="client-card active">
-                    <img src="https://i.postimg.cc/fTGjb95h/profile.webp" alt="profile-1" class="card-profile" loading="lazy">
+                    <img src="https://i.postimg.cc/fTGjb95h/profile.webp" alt="profile-1" class="card-profile"
+                        loading="lazy">
                     <h3 class="card-title">Bansilal Brata</h3>
                     <p class="card-description">Have you ever heard the expression, “Do not count your chickens before
                         they hatch?” Maybe an older, wiser individual would tell you this to keep you from getting ahead
@@ -373,7 +374,8 @@
                         obtaining your goals, you need to “Count your chicken before they hatch”</p>
                 </div>
                 <div class="client-card" loading="lazy">
-                    <img src="https://i.postimg.cc/L8FLSM69/user.webp" alt="profile-2" class="card-profile" loading="lazy">
+                    <img src="https://i.postimg.cc/L8FLSM69/user.webp" alt="profile-2" class="card-profile"
+                        loading="lazy">
                     <h3 class="card-title">Oluchi Mazi</h3>
                     <p class="card-description">The popularity of breakfast foods is a good reason to keep dependable
                         starters, such as eggs, bread and other staples, on hand. But why reserve them only for morning
@@ -381,7 +383,8 @@
                         without spending a lot of time in the kitchen.</p>
                 </div>
                 <div class="client-card">
-                    <img src="https://i.postimg.cc/0yYd3Nvd/bussiness-man.webp" alt="profile-3" class="card-profile" loading="lazy">
+                    <img src="https://i.postimg.cc/0yYd3Nvd/bussiness-man.webp" alt="profile-3" class="card-profile"
+                        loading="lazy">
                     <h3 class="card-title ">Fariba Mirzaii</h3>
                     <p class="card-description">If there is one thing kids love more than eating pizza, it’s being able
                         to make it themselves using all their favorite toppings. Creating a “make it yourself” pizza
@@ -389,7 +392,8 @@
                         Best of all, this crust recipe, which uses a surprise ingredient, is simple enough.</p>
                 </div>
                 <div class="client-card">
-                    <img src="https://i.postimg.cc/zBtyMs3k/man.webp" alt="profile-4" class="card-profile" loading="lazy">
+                    <img src="https://i.postimg.cc/zBtyMs3k/man.webp" alt="profile-4" class="card-profile"
+                        loading="lazy">
                     <h3 class="card-title ">Bansilal Brata</h3>
                     <p class="card-description">The popularity of breakfast foods is a good reason to keep dependable
                         starters, such as eggs, bread and other staples, on hand. But why reserve them only for morning
@@ -397,14 +401,16 @@
                         without spending a lot of time in the kitchen.</p>
                 </div>
                 <div class="client-card">
-                    <img src="https://i.postimg.cc/0yYd3Nvd/bussiness-man.webp" alt="profile-5" class="card-profile" loading="lazy">
+                    <img src="https://i.postimg.cc/0yYd3Nvd/bussiness-man.webp" alt="profile-5" class="card-profile"
+                        loading="lazy">
                     <h3 class="card-title ">Bansilal Brata</h3>
                     <p class="card-description">If there is one thing kids love more than eating pizza, it’s being able
                         to make it themselves using all their favorite toppings. Creating a “make it yourself” pizza
                         party is a great way to customize the meal while involving friends and family in a fun activity.
                         Best of all, this crust recipe, which uses a surprise ingredient, is simple enough.</p>
                 </div>
-                <img src="https://i.postimg.cc/QtgxcRZb/right-arrow.webp" alt="right-arrow" class="right arrow" loading="lazy">
+                <img src="https://i.postimg.cc/QtgxcRZb/right-arrow.webp" alt="right-arrow" class="right arrow"
+                    loading="lazy">
             </div>
         </div>
     </article>
@@ -415,7 +421,7 @@
             individual would tell you this to keep you from getting ahead of yourself.
         </p>
     </footer>
-  
+    <script src="./src/script.js"></script>
 </body>
 <!-- icon-1-->
 <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="20" height="16"
